💄 : fix image size
this should prevent layout shifts

see https://developer.chrome.com/docs/performance/insights/cls-culprit

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -153,7 +153,8 @@ ul.certifications {
 }
 
 .books .info a .featuredImage {
-    max-height: 10rem;
+    width: 250px;
+    height: 330px;
 }
 
 /* article headline style */
